Tweaked some margin and layout issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
   width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
 }
 
